2004-07-19 Scott Dattalo <scott@dattalo.com>
	* src/pic-processor.cc, src/pic-processor.h, src/pic-registers.cc,
	src/processor.h, src/processor.cc, gui/gui_statusbar.cc, 
	gui/gui_stopwatch.cc, modules/usart.cc, cli/cmd_frequency.cc:
	Added new member functions to the Processor class to simplify
	handling time.

2004-07-17 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def, src/src.vcproj, src/i2c-ee.cc:
	  small fixes for MSVC compilation

2004-07-16 Scott Dattalo <scott@dattalo.com>
	* gui/gui_statusbar.h, gui/gui_statusbar.cc: Now the status bar can
	accept an arbitrary of registers to display.
	* src/16bit-processors.cc, src/processor.h: Added BSR to the list
	of registers viewable in the status bar.
	* cli/cmd_trace.cc, cli/cmd_trace.h, cli/parse.yy, src/trace.cc: The
	trace raw option was broken.
	
2004-07-15 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc, cli/socket.cc, gui/gui_main.cc: The newly created
	gpsim socket interface now uses GLib GIOChannels instead of Pthreads.
	
2004-07-14 Scott Dattalo <scott@dattalo.com>
	* gui_break.cc, gui_main.cc, gui_processor.cc, gui_processor.h,
	gui_regwin.cc gui_regwin.h, gui_src.h, gui_src_asm.cc, 
	gui_src_opcode.cc, gui_statusbar.cc, gui_statusbar.h:
	Finished abstracting the gui status bar. Added a status bar to
	the source viewer.
	* 14bit-registers.cc, 14bit-registers.h, 14bit-tmrs.h, 
	16bit-processors.cc, Makefile.am, eeprom.h, intcon.h, ioports.cc,
	ioports.h, p12x.cc, p12x.h, p16f62x.cc, p16x5x.cc, p16x6x.cc, 
	p16x8x.cc, pic-processor.cc, pic-processor.h, pic-registers.cc, 
	pic-registers.h, pie.h, pir.h, processor.cc, processor.h, registers.h:
	Cleaned up some stale code.
	Added a MemoryAccess class and made it the base class to the
	RegisterMemoryAccess and ProgramMemoryAccess classes.

2004-07-14 Robert Pearce <rob@bdt-home.demon.co.uk>
	* src/i2c-ee.cc, src/i2c-ee.h, src/Makefile.am: New files that support
	an i2c peripheral