@@ -1,3 +1,7 @@
+2004-07-20 Scott Dattalo <scott@dattalo.com>
+	* src/stimuli.h, src/stimuli.cc: added input leakage modelling 
+	to I/O pins.
+	
 2004-07-19 Scott Dattalo <scott@dattalo.com>
 	* src/pic-processor.cc, src/pic-processor.h, src/pic-registers.cc,
 	src/processor.h, src/processor.cc, gui/gui_statusbar.cc, 
